<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_title">FBReader Bookshelf</string>
	<string name="bookshelf_title">Bookshelf</string>
	<string name="settings_title">Bookshelf Settings</string>

	<string name="menu_continue_reading">Continue reading</string>
	<string name="menu_choose_view">Choose view</string>
	<string name="menu_small_cards_view">Small cards</string>
	<string name="menu_tiny_cards_view">Tiny cards</string>
	<string name="menu_wide_cards_view">Wide cards</string>
	<string name="menu_covers_only_view">Covers</string>
	<string name="menu_old_view">Classic</string>
	<string name="menu_search">Search</string>
	<string name="menu_rescan">Rescan</string>
	<string name="menu_level_up">Level up</string>
	<string name="menu_all_authors">All authors</string>
	<string name="menu_all_series">All series</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_buy_premium">Buy FBReader Premium</string>
	<string name="menu_get_premium">Get FBReader Premium</string>
	<string name="menu_about">About the program</string>
	<string name="menu_whatsnew">What\'s new</string>

	<string name="promocode_instruction">Your promo code is %s. To redeem:&lt;br/&gt;&lt;br/&gt;1. Copy the code to clipboard&lt;br/&gt;2. Open Google Play application&lt;br/&gt;3. Select “Redeem” in the menu&lt;br/&gt;4. Paste your code and press “Redeem”&lt;br/&gt;5. Enjoy!</string>
	<string name="promocode_failure">Your promo code is not available at this moment. Please try again later.</string>
	<string name="promocode_network_failure">Network connection failure. Please check your connection and try again.</string>
	<string name="copy_to_clipboard">Copy to clipboard</string>

	<string name="shared_from_fbreader">Shared from &lt;a href=&quot;https://fbreader.org/&quot;&gt;FBReader&lt;/a&gt;</string>

	<string name="shelves">Shelves</string>
	<string name="category_favorites">Favourites</string>
	<string name="category_recently_added">Recently Added</string>
	<string name="category_recently_opened">Recently Opened</string>
	<string name="category_titles">Titles</string>
	<string name="category_authors">Authors</string>
	<string name="category_series">Series</string>
	<string name="category_tags">Tags</string>
	<string name="category_file_tree">File Tree</string>
	<string name="category_found">Found for: %s</string>

	<string name="book_action_read">Read</string>
	<string name="book_action_more">More…</string>
	<string name="book_action_share">Share…</string>
	<string name="book_action_delete">Delete</string>
	<string name="book_action_remove_from_recent">Remove from recent</string>
	<string name="book_action_add_to_favorites">Add to favourites</string>
	<string name="book_action_remove_from_favorites">Remove from favourites</string>
	<string name="book_action_add_to_custom_shelf">Add to custom shelf…</string>
	<string name="book_action_remove_from_current_shelf">Remove from “%s”</string>
	<string name="book_action_create_new_shelf">Create new shelf…</string>
	<string name="book_action_edit">Edit metainfo</string>
	<string name="book_added_to_shelf">“%1$s” added to “%2$s”</string>
	<string name="shelf_creator_title">Create new shelf</string>
	<string name="new_shelf_name_hint">New shelf name</string>
	<string name="read_progress">Read: %s%%</string>
	<string name="no_books_found">No books found</string>
	<string name="button_send">Send</string>
	<string name="button_install">Install</string>
	<string name="button_yes">Yes</string>
	<string name="button_no">No</string>
	<string name="button_ok">OK</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_buy">Buy</string>
	<string name="button_no_thanks">No, thanks</string>
	<string name="fbreader_not_found">FBReader not found. Install from Google Play?</string>
	<string name="delete_book_confirmation">Delete book from the device?</string>
	<string name="send_report">FBReader Bookshelf %s has been crached. You can send the report to developers.</string>

	<string name="settings_category_shelves">Shelves</string>
	<string name="settings_visible_shelves">Show standard shelves</string>
	<string name="settings_visible_shelves_summary_all">All</string>
	<string name="settings_visible_shelves_summary_none">None</string>
	<string name="settings_max_books_count_recently_added">Maximum number of books in “Recently Added”</string>
	<string name="settings_max_books_count_recently_opened">Maximum number of books in “Recently Opened”</string>
	<string name="settings_author_group_by_series">Group books by series on author shelves</string>
	<string name="settings_author_group_by_series_summary_on">Show mixed list of books and series</string>
	<string name="settings_author_group_by_series_summary_off">Show flat list of books</string>
	<string name="settings_show_intro">Show FBReader introduction book</string>
	<string name="settings_show_intro_always">Always</string>
	<string name="settings_show_intro_if_empty">If there is no other books in the library</string>
	<string name="settings_show_intro_never">Never</string>
	<string name="settings_series_show">Show series</string>
	<string name="settings_series_show_all">All</string>
	<string name="settings_series_show_two_or_more">Containing two or more books</string>
	<string name="settings_series_group">How to group series</string>
	<string name="settings_authors_group">How to group authors</string>
	<string name="settings_titles_group">How to group titles</string>
	<string name="settings_group_by_first_letter">Group by first letter</string>
	<string name="settings_group_none">Do not group</string>
	<string name="settings_group_auto">Authomatic behaviour</string>

	<string name="settings_category_ui">Look &amp; Feel</string>
	<string name="settings_color_scheme">Colour scheme</string>
	<string name="color_scheme_indigo_default">Indigo (default)</string>
	<string name="color_scheme_pink">Pink</string>
	<string name="color_scheme_teal">Teal</string>
	<string name="color_scheme_green">Green</string>
	<string name="color_scheme_grey_light">Grey (light)</string>
	<string name="color_scheme_grey_dark">Grey (dark)</string>
	<string name="settings_view_mode">View mode</string>
	<string name="view_mode_small_cards">Small cards</string>
	<string name="view_mode_tiny_cards">Tiny cards</string>
	<string name="view_mode_wide_cards">Wide cards</string>

	<string name="settings_category_wide_cards">Wide Cards Mode</string>
	<string name="settings_category_file_view">File View</string>
	<string name="settings_column_number_portrait">Number of columns in portrait mode</string>
	<string name="settings_column_number_landscape">Number of columns in landscape mode</string>

	<string name="settings_category_library">Library</string>
	<string name="settings_supported_file_formats">Supported file formats</string>
	<string name="settings_supported_file_formats_summary_all">All</string>
	<string name="settings_supported_file_formats_summary_none">None (are you sure?)</string>

	<string name="desc_book_cover">Book cover</string>
	<string name="desc_book_stack_covers">Book covers</string>
	<string name="desc_file_icon">File icon</string>
	<string name="desc_open_drawer">Show shelves list</string>
	<string name="desc_close_drawer">Hide shelves list</string>

	<string name="conflict_question">Both Bookshelf Plugin and FBReader Premium appear to be installed. Which one would you like to run?</string>
	<string name="conflict_bookshelf">Bookshelf Plugin</string>
	<string name="conflict_premium">FBReader Premium</string>
</resources>
