<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
>
	<item
		android:id="@+id/bks_library_menu_level_up"
		app:showAsAction="always"
		android:title="@string/menu_level_up"
	/>
	<item
		android:id="@+id/bks_library_menu_all_authors"
		app:showAsAction="always"
		android:title="@string/menu_all_authors"
	/>
	<item
		android:id="@+id/bks_library_menu_all_series"
		app:showAsAction="always"
		android:title="@string/menu_all_series"
	/>
	<item
		android:id="@+id/bks_library_menu_search"
		android:icon="@android:drawable/ic_menu_search"
		app:showAsAction="always"
		app:actionViewClass="android.support.v7.widget.SearchView"
		android:title="@string/menu_search"
	/>
	<item
		android:id="@+id/bks_library_menu_continue_reading"
		android:title="@string/menu_continue_reading"
	/>
	<item
		android:id="@+id/bks_library_menu_choose_view"
		android:title="@string/menu_choose_view"
	>
		<menu>
			<item
				android:id="@+id/bks_library_menu_small_cards"
				android:title="@string/menu_small_cards_view"
				android:checkable="true"
			/>
			<item
				android:id="@+id/bks_library_menu_tiny_cards"
				android:title="@string/menu_tiny_cards_view"
				android:checkable="true"
			/>
			<item
				android:id="@+id/bks_library_menu_wide_cards"
				android:title="@string/menu_wide_cards_view"
				android:checkable="true"
			/>
			<item
				android:id="@+id/bks_library_menu_covers"
				android:title="@string/menu_covers_only_view"
				android:checkable="true"
				android:visible="false"
			/>
			<item
				android:id="@+id/bks_library_menu_old_view"
				android:title="@string/menu_old_view"
				android:checkable="true"
			/>
		</menu>
	</item>
	<item
		android:id="@+id/bks_library_menu_settings"
		android:title="@string/menu_settings"
	/>
	<item
		android:id="@+id/bks_library_menu_rescan"
		android:title="@string/menu_rescan"
	/>
	<item
		android:id="@+id/bks_library_menu_buy_premium"
		android:title="@string/menu_buy_premium"
	/>
	<item
		android:id="@+id/bks_library_menu_get_premium"
		android:title="@string/menu_get_premium"
	/>
	<item
		android:id="@+id/bks_library_menu_about"
		android:title="@string/menu_about"
	/>
	<item
		android:id="@+id/bks_library_menu_whatsnew"
		android:title="@string/menu_whatsnew"
	/>
</menu>
