<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
>
	<item
		android:id="@+id/bks_book_action_delete"
		android:title="@string/book_action_delete"
		android:visible="false"
	/>
	<item
		android:id="@+id/bks_book_action_share"
		android:title="@string/book_action_share"
		android:visible="false"
	/>
	<item
		android:id="@+id/bks_book_action_remove_from_recent"
		android:title="@string/book_action_remove_from_recent"
		android:visible="false"
	/>
	<item
		android:id="@+id/bks_book_action_add_to_favorites"
		android:title="@string/book_action_add_to_favorites"
		android:visible="false"
	/>
	<item
		android:id="@+id/bks_book_action_remove_from_favorites"
		android:title="@string/book_action_remove_from_favorites"
		android:visible="false"
	/>
	<item
		android:id="@+id/bks_book_action_add_to_custom_shelf_quick"
		android:title="@string/book_action_add_to_custom_shelf"
		android:visible="false"
	/>
	<item
		android:id="@+id/bks_book_action_add_to_custom_shelf"
		android:title="@string/book_action_add_to_custom_shelf"
		android:visible="false"
	>
		<menu>
			<item
				android:id="@+id/bks_book_action_create_new_shelf"
				android:title="@string/book_action_create_new_shelf"
			/>
		</menu>
	</item>
	<item
		android:id="@+id/bks_book_action_remove_from_current_shelf"
		android:title="@string/book_action_remove_from_current_shelf"
		android:visible="false"
	/>
</menu>
