<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:vnt="http://schemas.android.com/apk/res-auto"
>
	<PreferenceCategory
		android:title="@string/settings_category_ui"
	>
		<org.fbreader.plugin.library.prefs.ColorSchemePreference
			android:key="color_scheme"
			android:title="@string/settings_color_scheme"
			android:defaultValue="@string/color_scheme_default_code"
			android:entries="@array/color_schemes_readable"
			android:entryValues="@array/color_schemes_codes"
		/>
		<org.fbreader.plugin.library.prefs.ListPreferenceWithSummary
			android:key="fbreader.library.view"
			android:title="@string/settings_view_mode"
			android:defaultValue="@string/view_mode_default_code"
			android:entries="@array/view_modes_readable"
			android:entryValues="@array/view_modes_codes"
		/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/settings_category_wide_cards"
	>
		<com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
			android:key="wide_card_column_number_landscape"
			android:title="@string/settings_column_number_landscape"
			android:defaultValue="@integer/wide_card_column_number_landscape"
			vnt:maxValue="6"
			vnt:minValue="1"
		/>
		<com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
			android:key="wide_card_column_number_portrait"
			android:title="@string/settings_column_number_portrait"
			android:defaultValue="@integer/wide_card_column_number_portrait"
			vnt:maxValue="6"
			vnt:minValue="1"
		/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/settings_category_file_view"
	>
		<com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
			android:key="file_view_column_number_landscape"
			android:title="@string/settings_column_number_landscape"
			android:defaultValue="@integer/file_view_column_number_landscape"
			vnt:maxValue="6"
			vnt:minValue="1"
		/>
		<com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
			android:key="file_view_column_number_portrait"
			android:title="@string/settings_column_number_portrait"
			android:defaultValue="@integer/file_view_column_number_portrait"
			vnt:maxValue="6"
			vnt:minValue="1"
		/>
	</PreferenceCategory>
	<PreferenceCategory
		android:key="shelves_group"
		android:title="@string/settings_category_shelves"
	>
		<com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
			android:key="RecentlyAdded:max_books_count"
			android:title="@string/settings_max_books_count_recently_added"
			android:defaultValue="24"
			vnt:maxValue="48"
			vnt:minValue="1"
		/>
		<com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
			android:key="RecentlyOpened:max_books_count"
			android:title="@string/settings_max_books_count_recently_opened"
			android:defaultValue="24"
			vnt:maxValue="48"
			vnt:minValue="1"
		/>
		<!--CheckBoxPreference
			android:key="Author:group_by_series"
			android:title="@string/settings_author_group_by_series"
			android:summaryOn="@string/settings_author_group_by_series_summary_on"
			android:summaryOff="@string/settings_author_group_by_series_summary_off"
			android:defaultValue="false"
		/-->
	</PreferenceCategory>
</PreferenceScreen>
