<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="200sp"
	android:paddingTop="10sp"
	android:paddingLeft="35sp"
	android:paddingRight="35sp"
>
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:gravity="center_horizontal"
		android:text="@string/shelf_creator_title"
	/>
	<EditText
		android:id="@+id/bks_shelf_creator_label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:hint="@string/new_shelf_name_hint"
	/>
	<TextView
		android:id="@+id/bks_shelf_creator_ok"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		style="?attr/flatButtonStyle"
		android:textSize="15sp"
		android:text="@string/button_ok"
	/>
	<TextView
		android:id="@+id/bks_shelf_creator_cancel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_toLeftOf="@id/bks_shelf_creator_ok"
		style="?attr/flatButtonStyle"
		android:textSize="15sp"
		android:text="@string/button_cancel"
	/>
</RelativeLayout>
