<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?attr/mainBackgroundColor"
>
	<ImageView
		android:id="@+id/bks_book_popup_more"
		android:layout_width="wrap_content"
		android:layout_height="@dimen/popup_action_more_height"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		style="?attr/flatButtonMoreStyle"
		android:contentDescription="@string/book_action_more"
	/>
	<TextView
		android:id="@+id/bks_book_popup_read"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_toLeftOf="@id/bks_book_popup_more"
		style="?attr/flatButtonStyle"
		android:textSize="@dimen/popup_action_text_size"
		android:text="@string/book_action_read"
	/>
	<TextView
		android:id="@+id/bks_book_popup_cancel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_toLeftOf="@id/bks_book_popup_read"
		style="?attr/flatButtonStyle"
		android:textSize="@dimen/popup_action_text_size"
		android:text="@string/button_cancel"
	/>
	<ScrollView
		android:scrollbars="vertical"
		android:fadeScrollbars="true"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@id/bks_book_popup_more"
	>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingTop="@dimen/popup_text_padding"
			android:paddingLeft="@dimen/popup_text_padding"
			android:paddingRight="@dimen/popup_text_padding"
		>
			<TextView
				android:id="@+id/bks_book_popup_header"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			/>
			<android.patches.JellyBeanSpanFixTextView
				android:id="@+id/bks_book_popup_description"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>
