<?xml version="1.0" encoding="utf-8"?>
<org.fbreader.plugin.library.view.BookView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="@dimen/tiny_card_height"
	style="?attr/compactCardViewStyle"
>
	<LinearLayout
		android:id="@+id/bks_book_main_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
	>
		<ImageView
			android:id="@+id/bks_book_cover"
			android:layout_width="match_parent"
			android:layout_height="@dimen/tiny_card_cover_height"
			android:scaleType="centerCrop"
			android:layout_marginLeft="@dimen/tiny_card_padding"
			android:layout_marginRight="@dimen/tiny_card_padding"
			android:layout_marginTop="@dimen/tiny_card_padding"
			android:layout_marginBottom="@dimen/tiny_card_cover_bottom_padding"
			android:contentDescription="@string/desc_book_cover"
		/>
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="@dimen/tiny_card_text_height"
		>
			<TextView
				android:id="@+id/bks_book_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentTop="true"
				android:layout_marginTop="@dimen/tiny_card_padding"
				android:paddingLeft="@dimen/tiny_card_text_padding"
				android:paddingRight="@dimen/tiny_card_text_padding"
				android:textSize="@dimen/tiny_card_text_size"
				android:lines="2"
				android:ellipsize="end"
			/>
			<ImageView
				android:id="@+id/bks_book_more"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/tiny_card_more_height"
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true"
				android:paddingLeft="@dimen/tiny_card_more_padding"
				android:paddingRight="@dimen/tiny_card_more_padding"
				style="?attr/flatButtonMoreStyle"
				android:contentDescription="@string/book_action_more"
			/>
			<TextView
				android:id="@+id/bks_book_read"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_toLeftOf="@id/bks_book_more"
				android:paddingLeft="@dimen/tiny_card_text_padding"
				android:paddingRight="@dimen/tiny_card_text_padding"
				style="?attr/flatButtonStyle"
				android:textSize="@dimen/tiny_card_text_size"
				android:text="@string/book_action_read"
			/>
			<TextView
				android:id="@+id/bks_book_status_small"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_alignParentLeft="true"
				android:paddingLeft="@dimen/tiny_card_text_padding"
				android:paddingRight="@dimen/tiny_card_text_padding"
				style="?attr/flatButtonPseudoStyle"
				android:textSize="@dimen/tiny_card_text_size"
			/>
		</RelativeLayout>
	</LinearLayout>
</org.fbreader.plugin.library.view.BookView>
