<?xml version="1.0" encoding="utf-8"?>
<org.fbreader.plugin.library.view.BookView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="@dimen/wide_card_height"
	style="?attr/cardViewStyle"
>
	<LinearLayout
		android:id="@+id/bks_book_main_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
	>
		<ImageView
			android:id="@+id/bks_book_cover"
			android:layout_width="@dimen/wide_card_cover_width"
			android:layout_height="@dimen/wide_card_cover_height"
			android:scaleType="fitCenter"
			android:layout_marginLeft="@dimen/wide_card_padding"
			android:layout_marginTop="@dimen/wide_card_padding"
			android:layout_marginBottom="@dimen/wide_card_image_margin_bottom"
			android:contentDescription="@string/desc_book_cover"
		/>
		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
		>
			<TextView
				android:id="@+id/bks_book_authors"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="@dimen/wide_card_text_padding_left"
				android:paddingRight="@dimen/wide_card_text_padding_right"
				android:layout_marginRight="@dimen/wide_card_padding"
				android:layout_marginTop="@dimen/wide_card_padding"
				android:textSize="@dimen/wide_card_normal_text_size"
				android:lines="1"
				android:ellipsize="end"
			/>
			<TextView
				android:id="@+id/bks_book_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="@dimen/wide_card_text_padding_left"
				android:paddingRight="@dimen/wide_card_text_padding_right"
				android:layout_marginRight="@dimen/wide_card_padding"
				android:layout_marginTop="@dimen/wide_card_padding"
				android:layout_below="@id/bks_book_authors"
				android:maxLines="3"
				android:ellipsize="end"
				android:textSize="@dimen/wide_card_title_text_size"
				android:textStyle="bold"
			/>
			<TextView
				android:id="@+id/bks_book_status"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="@dimen/wide_card_text_padding_left"
				android:paddingRight="@dimen/wide_card_text_padding_right"
				android:layout_marginRight="@dimen/wide_card_padding"
				android:layout_marginTop="@dimen/wide_card_padding"
				android:layout_below="@id/bks_book_title"
				android:textSize="@dimen/wide_card_normal_text_size"
			/>
			<RelativeLayout
				android:id="@+id/bks_book_favorite_container"
				android:layout_width="@dimen/wide_card_fav_container_size"
				android:layout_height="@dimen/wide_card_fav_container_size"
				android:layout_alignParentTop="true"
				android:layout_alignParentRight="true"
			>
				<View
					android:id="@+id/bks_book_favorite"
					android:layout_width="@dimen/wide_card_fav_size"
					android:layout_height="@dimen/wide_card_fav_size"
					android:background="@android:drawable/btn_star_big_off"
					android:layout_centerInParent="true"
				/>
			</RelativeLayout>
			<TextView
				android:id="@+id/bks_book_more"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true"
				style="?attr/flatButtonStyle"
				android:textSize="@dimen/wide_card_action_text_size"
				android:text="@string/book_action_more"
			/>
			<TextView
				android:id="@+id/bks_book_read"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_toLeftOf="@id/bks_book_more"
				style="?attr/flatButtonStyle"
				android:textSize="@dimen/wide_card_action_text_size"
				android:text="@string/book_action_read"
			/>
		</RelativeLayout>
	</LinearLayout>
</org.fbreader.plugin.library.view.BookView>
